FIX: 100vh overflow

--- a/web-client/style.css
+++ b/web-client/style.css
@@ -7,7 +7,7 @@ body {
   gap: 1.5rem;
   height: 100vh;
   margin: 0;
-  padding: 2rem;
+  padding: 0;
   background: #121212;
   color: #e0e0e0;
   font-size: 1.1rem;
